--- a/index.html
+++ b/index.html
@@ -5,27 +5,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/font/flaticon.css">
 </head>
 
 <body>
   <header>
     <div class="social-media__container">
-      <a href="">Facebook</a>
-      <a href="">Twitter</a>
-      <a href="">Instagram</a>
-      <a href="">LinkedIn</a>
-      <a href="">Youtube</a>
+      <a href=""><span class="flaticon-001-facebook"></span></a>
+      <a href=""><span class="flaticon-002-twitter"></span></a>
+      <a href=""><span class="flaticon-011-instagram"></span></a>
+      <a href=""><span class="flaticon-010-linkedin"></span></a>
+      <a href=""><span class="flaticon-008-youtube"></span></a>
     </div>
     </div>
     <nav>
       <div class="logo">
-        <a href=""></a>
+        <a href=""><img src="/assets/img/Logo-negro.webp" alt=""></a>
       </div>
       <div class="about-me">
         <a href="">Sobre mí</a>
       </div>
     </nav>
   </header>
+  <main>
+    <div class="hero__container">
+      <h1>Conoce las novedades y noticias del mundo Tech</h1>
+      <a href="/blog.html">Entra ya!</a>
+    </div>
+  </main>
 </body>
 
 </html>
