Fix typo in index.html link to blogs page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main>
     <div class="hero__container">
       <h1>Conoce las novedades y noticias del mundo Tech</h1>
-      <a href="/blog.html">Entra ya!</a>
+      <a href="/blogs.html">Entra ya!</a>
     </div>
   </main>
 </body>
