feat: Update main.css and index.html for homepage layout

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main class="home__main">
     <div class="hero__container">
       <h1>Conoce las novedades y noticias del mundo Tech</h1>
       <a href="/blogs.html">Entra ya!</a>
