--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="home__header">
     <div class="social-media__container">
       <a href=""><span class="flaticon-001-facebook"></span></a>
       <a href=""><span class="flaticon-002-twitter"></span></a>
