feat: Update blogs layout with header, navigation, and hero section

--- a/blogs.html
+++ b/blogs.html
@@ -1,11 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog</title>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/font/flaticon.css">
 </head>
+
 <body>
-    
+  <header class="home__header">
+    <div class="social-media__container">
+      <a href=""><span class="flaticon-001-facebook"></span></a>
+      <a href=""><span class="flaticon-002-twitter"></span></a>
+      <a href=""><span class="flaticon-011-instagram"></span></a>
+      <a href=""><span class="flaticon-010-linkedin"></span></a>
+      <a href=""><span class="flaticon-008-youtube"></span></a>
+    </div>
+    </div>
+    <nav>
+      <div class="logo">
+        <a href=""><img src="/assets/img/Logo-negro.webp" alt=""></a>
+      </div>
+      <div class="about-me">
+        <a href="">Sobre mí</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="blogs__main">
+    <section class="article__banner">
+      <header>
+        <h2>Noticias</h2>
+      </header>
+      <article class="article--big">
+        <img src="/assets/img/main-news-img.png" alt="Imagen de jugetes que hacen semejansa a viejas">
+        <div>
+          <h3>Titulo del Blogpost</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, illum aspernatur nulla magnam esse neque mollitia eum cumque explicabo magni officia eligendi inventore laboriosam reprehenderit?</p>
+          <a href="" class="button-article"></a>
+        </div>
+      </article>
+    </section>
+    <section class="article__container">
+      <header>
+        <h2>Últimos blogpost</h2>
+      </header>
+      <div class="article__grid">
+        <article class="article--small">
+          <img src="" alt="">
+          <header>
+            <h3>Titulo del Blogpost</h3>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
+          <a href="" class="button-article"></a>
+        </article>
+
+        <article class="article--small">
+          <img src="" alt="">
+          <header>
+            <h3>Titulo del Blogpost</h3>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
+          <a href="" class="button-article"></a>
+        </article>
+
+        <article class="article--small">
+          <img src="" alt="">
+          <header>
+            <h3>Titulo del Blogpost</h3>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
+          <a href="" class="button-article"></a>
+        </article>
+
+        <article class="article--small">
+          <img src="" alt="">
+          <header>
+            <h3>Titulo del Blogpost</h3>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
+          <a href="" class="button-article"></a>
+        </article>
+
+        <article class="article--small">
+          <img src="" alt="">
+          <header>
+            <h3>Titulo del Blogpost</h3>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
+          <a href="" class="button-article"></a>
+        </article>
+
+        <article class="article--small">
+          <img src="" alt="">
+          <header>
+            <h3>Titulo del Blogpost</h3>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
+          <a href="" class="button-article"></a>
+        </article>
+
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, modi.
+    </p>
+  </footer>
 </body>
+
 </html>
