feat: Update blogs layout with images and styling postcard

--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/font/flaticon.css">
 </head>
 
-<body>
+<body class="body__blogpage">
   <header class="home__header">
     <div class="social-media__container">
       <a href=""><span class="flaticon-001-facebook"></span></a>
@@ -49,7 +49,7 @@
       </header>
       <div class="article__grid">
         <article class="article--small">
-          <img src="" alt="">
+          <img src="/assets/img/post-1.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
@@ -58,7 +58,7 @@
         </article>
 
         <article class="article--small">
-          <img src="" alt="">
+          <img src="/assets/img/post-2.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
@@ -67,7 +67,7 @@
         </article>
 
         <article class="article--small">
-          <img src="" alt="">
+          <img src="/assets/img/post-3.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
@@ -76,7 +76,7 @@
         </article>
 
         <article class="article--small">
-          <img src="" alt="">
+          <img src="/assets/img/post-1.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
@@ -85,7 +85,7 @@
         </article>
 
         <article class="article--small">
-          <img src="" alt="">
+          <img src="/assets/img/post-2.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
@@ -94,7 +94,7 @@
         </article>
 
         <article class="article--small">
-          <img src="" alt="">
+          <img src="/assets/img/post-3.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
