Update navigation links in index.html and blogs.html

--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog</title>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/font/flaticon.css">
 </head>
-<body>
-    
+
+<body class="body__blogpage">
+  <header class="home__header">
+    <div class="social-media__container">
+      <a href=""><span class="flaticon-001-facebook"></span></a>
+      <a href=""><span class="flaticon-002-twitter"></span></a>
+      <a href=""><span class="flaticon-011-instagram"></span></a>
+      <a href=""><span class="flaticon-010-linkedin"></span></a>
+      <a href=""><span class="flaticon-008-youtube"></span></a>
+    </div>
+    </div>
+    <nav>
+      <div class="logo">
+        <a href="/index.html"><img src="/assets/img/Logo-negro.webp" alt=""></a>
+      </div>
+      <div class="about-me">
+        <a href="/perfil.html">Sobre mí</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="blog__main">
+    <figure>
+      <img src="/assets/img/main-news-img.png" alt="">
+    </figure>
+    <section class="text__container">
+      <h3>Noticias</h3>
+      <article>
+        <h2>Título del Blogpost</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, sequi ratione? Unde eum nesciunt laborum maxime minima veniam iusto eligendi natus blanditiis laudantium ab recusandae quam rem velit aperiam molestiae, aut cum quia delectus, vitae illo neque quibusdam voluptates. Natus maiores laboriosam hic autem voluptate quibusdam, esse rem? Possimus eum corrupti ipsum quas culpa sit reiciendis repellat sunt sequi, exercitationem debitis officiis corporis quisquam adipisci enim voluptatum laudantium alias nostrum impedit! Amet atque non natus error vitae? Officiis, minus! Voluptatibus possimus sapiente suscipit, consequatur ipsum nesciunt itaque vel eaque modi architecto dicta nihil dignissimos laborum a consectetur. Officiis repellat eos quo deserunt hic iusto labore possimus, obcaecati molestiae. Libero, laudantium perferendis! Magnam distinctio qui alias sit rerum repellendus ab maiores quasi nobis error? Tenetur facere tempora quos nihil nam suscipit alias incidunt dolorem sint maiores, possimus a ipsum, libero magnam dolore. Autem dolore illum dignissimos asperiores minus dolorem voluptatum, commodi odio ad, deserunt officiis. Dolores quod natus aperiam placeat provident qui vitae corrupti. Totam, culpa. Aperiam consequatur ipsum rem nihil, repudiandae modi totam, voluptas facere repellat laborum fugiat labore eum ipsa amet nam dicta, assumenda nobis quisquam excepturi sint. Et optio delectus assumenda a id molestias veniam eos tempore quis sint dignissimos eaque sequi vero inventore reprehenderit, modi porro nesciunt dicta animi magnam dolore nostrum. Veniam possimus culpa cupiditate minima ratione quasi rerum repellat, ab magnam suscipit non incidunt aspernatur quibusdam, exercitationem vero repellendus dignissimos maiores ipsam hic porro reiciendis sed provident, facere quaerat! Dolore laudantium quos minus consectetur debitis magnam sequi, sed ipsam, harum dolorem ad saepe molestiae magni? Iusto qui nam facere asperiores similique minus eveniet perspiciatis aliquid sequi illum cupiditate dolorem quam sit est voluptas laudantium vitae, in eos? Officia dolorum quo maiores tempore porro minima autem saepe magnam officiis esse. In, quos aspernatur. Illum, architecto exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, tempore et? Optio alias rem pariatur expedita molestias incidunt id illo nesciunt repudiandae magnam impedit debitis, provident hic, totam nihil harum eos natus minima voluptate quam perspiciatis asperiores! Officiis impedit tenetur iste animi tempore, nam aut sed et odit accusantium voluptate minima. Tenetur reiciendis, fugit natus temporibus non officia, doloribus consequuntur minima a esse suscipit asperiores. Reiciendis, maiores. Voluptatum fugit quibusdam voluptas, suscipit quae magni et nemo. Quas provident qui obcaecati est porro sit blanditiis fugit facilis neque, quasi, eveniet mollitia vero architecto ipsa ullam, dignissimos earum nemo suscipit non pariatur!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eius quaerat molestiae, quidem ea consequuntur odio sunt. Ratione, aliquam tempora. Quia porro aut tempore officiis, vel numquam sapiente sit voluptas.</p>
+      </article>
+    </section>
+    <section class="contact__container">
+      <div class="card__contact">
+        <img src="/assets/img/013-newsletter.png" alt="">
+        <div class="contact__right">
+          <a href="">Contacto</a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, fuga.</p>
+        </div>
+      </div>
+
+      <div class="card__contact">
+        <img src="/assets/img/006-like.png" alt="">
+        <div class="contact__right">
+          <a href="">Escribe</a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, modi.
+    </p>
+  </footer>
 </body>
+
 </html>
