--- a/blogs.html
+++ b/blogs.html
@@ -21,10 +21,10 @@
     </div>
     <nav>
       <div class="logo">
-        <a href=""><img src="/assets/img/Logo-negro.webp" alt=""></a>
+        <a href="/index.html"><img src="/assets/img/Logo-negro.webp" alt=""></a>
       </div>
       <div class="about-me">
-        <a href="">Sobre mí</a>
+        <a href="/perfil.html">Sobre mí</a>
       </div>
     </nav>
   </header>
@@ -39,7 +39,7 @@
         <div>
           <h3>Titulo del Blogpost</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, illum aspernatur nulla magnam esse neque mollitia eum cumque explicabo magni officia eligendi inventore laboriosam reprehenderit?</p>
-          <a href="" class="button-article"></a>
+          <a href="/blog.html" class="button-article"></a>
         </div>
       </article>
     </section>
@@ -54,7 +54,7 @@
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="" class="button-article"></a>
+          <a href="/blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
@@ -63,7 +63,7 @@
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="" class="button-article"></a>
+          <a href="/blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
@@ -72,7 +72,7 @@
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="" class="button-article"></a>
+          <a href="/blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
@@ -81,7 +81,7 @@
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="" class="button-article"></a>
+          <a href="/blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
@@ -90,7 +90,7 @@
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="" class="button-article"></a>
+          <a href="/blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
@@ -99,7 +99,7 @@
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="" class="button-article"></a>
+          <a href="/blog.html" class="button-article"></a>
         </article>
 
       </div>
