--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href=""><img src="/assets/img/Logo-negro.webp" alt=""></a>
       </div>
       <div class="about-me">
-        <a href="">Sobre mí</a>
+        <a href="/perfil.html">Sobre mí</a>
       </div>
     </nav>
   </header>
