Update padding in article__banner and font sizes in profile page

--- a/perfil.html
+++ b/perfil.html
@@ -1,11 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog</title>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/font/flaticon.css">
 </head>
-<body>
-    
+
+<body class="body__blogpage">
+  <header class="home__header">
+    <div class="social-media__container">
+      <a href=""><span class="flaticon-001-facebook"></span></a>
+      <a href=""><span class="flaticon-002-twitter"></span></a>
+      <a href=""><span class="flaticon-011-instagram"></span></a>
+      <a href=""><span class="flaticon-010-linkedin"></span></a>
+      <a href=""><span class="flaticon-008-youtube"></span></a>
+    </div>
+    </div>
+    <nav>
+      <div class="logo">
+        <a href="/index.html"><img src="/assets/img/Logo-negro.webp" alt=""></a>
+      </div>
+      <div class="about-me">
+        <a href="/perfil.html">Sobre mí</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="blogs__main profile__main">
+    <section class="article__banner">
+      <article class="article--big">
+        <img src="/assets/img/profile-pic.jpg" alt="Imagen de jugetes que hacen semejansa a viejas">
+        <div>
+          <h3>Hola!</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, illum aspernatur nulla magnam esse neque mollitia eum cumque explicabo magni officia eligendi inventore laboriosam reprehenderit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, ratione!</p>
+        </div>
+      </article>
+    </section>
+
+    <section class="article__container">
+      <header>
+        <h2>Proyectos</h2>
+      </header>
+      <div class="article__grid">
+        <article class="article--small">
+          <header>
+            <h3>Titulo del Blogpost</h3>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dolorem praesentium, nisi doloribus facere nemo.</p>
+        </article>
+
+        <article class="article--small">
+          <header>
+            <h3>Titulo del Blogpost</h3>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias id maxime at nemo sequi accusamus praesentium aliquam suscipit non ea.</p>
+        </article>
+
+        <article class="article--small">
+          <header>
+            <h3>Titulo del Blogpost</h3>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, soluta velit. Recusandae, sapiente? Et libero cum vitae minus facilis harum ea. Deleniti at modi iure, tempora laboriosam facilis cumque eveniet.</p>
+        </article>
+
+      </div>
+    </section>
+
+    <section class="contact__container">
+      <div class="card__contact">
+        <img src="/assets/img/013-newsletter.png" alt="">
+        <div class="contact__right">
+          <a href="">Contacto</a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, fuga. lorem15</p>
+        </div>
+      </div>
+
+      <div class="card__contact">
+        <img src="/assets/img/006-like.png" alt="">
+        <div class="contact__right">
+          <a href="">Escribe</a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, modi.
+    </p>
+  </footer>
 </body>
+
 </html>
