--- a/blogs.html
+++ b/blogs.html
@@ -7,6 +7,9 @@
   <title>Blog</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/font/flaticon.css">
+  <link rel="stylesheet" href="/css/media-mobile.css">
+
+
 </head>
 
 <body class="body__blogpage">
