--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Home</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/font/flaticon.css">
+  <link rel="stylesheet" href="/css/media-mobile.css">
+
 </head>
 
 <body>
