Update CSS and HTML files for mobile responsiveness

--- a/blogs.html
+++ b/blogs.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/font/flaticon.css">
-  <link rel="stylesheet" href="/css/media-mobile.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/font/flaticon.css">
+  <link rel="stylesheet" href="./css/media-mobile.css">
 
 
 </head>
@@ -24,10 +24,10 @@
     </div>
     <nav>
       <div class="logo">
-        <a href="/index.html"><img src="/assets/img/Logo-negro.webp" alt=""></a>
+        <a href="./index.html"><img src="./assets/img/Logo-negro.webp" alt=""></a>
       </div>
       <div class="about-me">
-        <a href="/perfil.html">Sobre mí</a>
+        <a href="./perfil.html">Sobre mí</a>
       </div>
     </nav>
   </header>
@@ -38,11 +38,11 @@
         <h2>Noticias</h2>
       </header>
       <article class="article--big">
-        <img src="/assets/img/main-news-img.png" alt="Imagen de jugetes que hacen semejansa a viejas">
+        <img src="./assets/img/main-news-img.png" alt="Imagen de jugetes que hacen semejansa a viejas">
         <div>
           <h3>Titulo del Blogpost</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, illum aspernatur nulla magnam esse neque mollitia eum cumque explicabo magni officia eligendi inventore laboriosam reprehenderit?</p>
-          <a href="/blog.html" class="button-article"></a>
+          <a href="./blog.html" class="button-article"></a>
         </div>
       </article>
     </section>
@@ -52,57 +52,57 @@
       </header>
       <div class="article__grid">
         <article class="article--small">
-          <img src="/assets/img/post-1.png" alt="">
+          <img src="./assets/img/post-1.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="/blog.html" class="button-article"></a>
+          <a href="./blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
-          <img src="/assets/img/post-2.png" alt="">
+          <img src="./assets/img/post-2.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="/blog.html" class="button-article"></a>
+          <a href="./blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
-          <img src="/assets/img/post-3.png" alt="">
+          <img src="./assets/img/post-3.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="/blog.html" class="button-article"></a>
+          <a href="./blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
-          <img src="/assets/img/post-1.png" alt="">
+          <img src="./assets/img/post-1.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="/blog.html" class="button-article"></a>
+          <a href="./blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
-          <img src="/assets/img/post-2.png" alt="">
+          <img src="./assets/img/post-2.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="/blog.html" class="button-article"></a>
+          <a href="./blog.html" class="button-article"></a>
         </article>
 
         <article class="article--small">
-          <img src="/assets/img/post-3.png" alt="">
+          <img src="./assets/img/post-3.png" alt="">
           <header>
             <h3>Titulo del Blogpost</h3>
           </header>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci tenetur quae voluptatem vel id laboriosam illum quis esse sunt reprehenderit?</p>
-          <a href="/blog.html" class="button-article"></a>
+          <a href="./blog.html" class="button-article"></a>
         </article>
 
       </div>
