--- a/perfil.html
+++ b/perfil.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/font/flaticon.css">
-  <link rel="stylesheet" href="/css/media-mobile.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/font/flaticon.css">
+  <link rel="stylesheet" href="./css/media-mobile.css">
 </head>
 
 <body class="body__blogpage">
@@ -22,10 +22,10 @@
     </div>
     <nav>
       <div class="logo">
-        <a href="/index.html"><img src="/assets/img/Logo-negro.webp" alt=""></a>
+        <a href="./index.html"><img src="./assets/img/Logo-negro.webp" alt=""></a>
       </div>
       <div class="about-me">
-        <a href="/perfil.html">Sobre mí</a>
+        <a href="./perfil.html">Sobre mí</a>
       </div>
     </nav>
   </header>
@@ -33,7 +33,7 @@
   <main class="blogs__main profile__main">
     <section class="article__banner">
       <article class="article--big">
-        <img src="/assets/img/profile-pic.jpg" alt="Imagen de jugetes que hacen semejansa a viejas">
+        <img src="./assets/img/profile-pic.jpg" alt="Imagen de jugetes que hacen semejansa a viejas">
         <div>
           <h3>Hola!</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, illum aspernatur nulla magnam esse neque mollitia eum cumque explicabo magni officia eligendi inventore laboriosam reprehenderit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, ratione!</p>
@@ -72,7 +72,7 @@
 
     <section class="contact__container">
       <div class="card__contact">
-        <img src="/assets/img/013-newsletter.png" alt="">
+        <img src="./assets/img/013-newsletter.png" alt="">
         <div class="contact__right">
           <a href="">Contacto</a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, fuga. lorem15</p>
@@ -80,7 +80,7 @@
       </div>
 
       <div class="card__contact">
-        <img src="/assets/img/006-like.png" alt="">
+        <img src="./assets/img/006-like.png" alt="">
         <div class="contact__right">
           <a href="">Escribe</a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
