--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/font/flaticon.css">
-  <link rel="stylesheet" href="/css/media-mobile.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/font/flaticon.css">
+  <link rel="stylesheet" href="./css/media-mobile.css">
 
 
 </head>
@@ -24,17 +24,17 @@
     </div>
     <nav>
       <div class="logo">
-        <a href="/index.html"><img src="/assets/img/Logo-negro.webp" alt=""></a>
+        <a href="./index.html"><img src="./assets/img/Logo-negro.webp" alt=""></a>
       </div>
       <div class="about-me">
-        <a href="/perfil.html">Sobre mí</a>
+        <a href="./perfil.html">Sobre mí</a>
       </div>
     </nav>
   </header>
 
   <main class="blog__main">
     <figure>
-      <img src="/assets/img/main-news-img.png" alt="">
+      <img src="./assets/img/main-news-img.png" alt="">
     </figure>
     <section class="text__container">
       <h3>Noticias</h3>
@@ -47,7 +47,7 @@
     </section>
     <section class="contact__container">
       <div class="card__contact">
-        <img src="/assets/img/013-newsletter.png" alt="">
+        <img src="./assets/img/013-newsletter.png" alt="">
         <div class="contact__right">
           <a href="">Contacto</a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, fuga.</p>
@@ -55,7 +55,7 @@
       </div>
 
       <div class="card__contact">
-        <img src="/assets/img/006-like.png" alt="">
+        <img src="./assets/img/006-like.png" alt="">
         <div class="contact__right">
           <a href="">Escribe</a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
