--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/font/flaticon.css">
-  <link rel="stylesheet" href="/css/media-mobile.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/font/flaticon.css">
+  <link rel="stylesheet" href="./css/media-mobile.css">
 
 </head>
 
@@ -23,17 +23,17 @@
     </div>
     <nav>
       <div class="logo">
-        <a href=""><img src="/assets/img/Logo-negro.webp" alt=""></a>
+        <a href="./index.html" src="./assets/img/Logo-negro.webp" alt=""></a>
       </div>
       <div class="about-me">
-        <a href="/perfil.html">Sobre mí</a>
+        <a href="./perfil.html">Sobre mí</a>
       </div>
     </nav>
   </header>
   <main class="home__main">
     <div class="hero__container">
       <h1>Conoce las novedades y noticias del mundo Tech</h1>
-      <a href="/blogs.html">Entra ya!</a>
+      <a href="./blogs.html">Entra ya!</a>
     </div>
   </main>
 </body>
