Update font URLs to use relative paths for better file organization

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <nav>
       <div class="logo">
-        <a href="./index.html" src="./assets/img/Logo-negro.webp" alt=""></a>
+        <a href="./index.html"><img src="./assets/img/Logo-negro.webp" alt=""></a>
       </div>
       <div class="about-me">
         <a href="./perfil.html">Sobre mí</a>
